--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
     <title>surface</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
+    <link href="http://cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+    <link href="http://cdn.bootcss.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/css/app.css" rel="stylesheet">
     
+    <script src="http://cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="http://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
     <script src="node_modules/core-js/client/shim.min.js"></script>
     <script src="node_modules/zone.js/dist/zone.js"></script>
     <script src="node_modules/reflect-metadata/Reflect.js"></script>
@@ -16,5 +20,36 @@
   </head>
   <body>
     <my-app>Loading...</my-app>
+    <div class="container-fluid">
+      <nav class="row" id="nav">
+        <div class="col-xs-12 col-md-5 menu">
+          <ul>
+            <li><a href="###"><img src="img/logo.png" alt="dockyard" /></a></li>
+            <li><a href="###">Repositories</a></li>
+            <li><a href="###">Organizations</a></li>
+          </ul>
+        </div>
+        <div class="col-xs-12 col-md-5 col-md-offset-2 user">
+          <ul class="pull-right">
+            <li><input type="text" placeholder="search" /></li>
+            <li class="relative">
+              <a href="#createRepo" data-toggle="collapse"><i class="fa fa-plus"></i>Create</a>
+              <ul class="panel-collapse collapse" id="createRepo" >
+                <li><a href="###"><i class="fa fa-book"></i>Create Repository</a></li>
+                <li><a href="###"><i class="fa fa-users"></i>Create Organization</a></li>
+              </ul>
+            </li>
+            <li class="relative">
+              <a href="#userSetting" data-toggle="collapse"><i class="fa fa-user"></i>User</a>
+              <ul class="panel-collapse collapse in" id="userSetting" >
+                <li><a href="###"><i class="fa fa-book"></i>Setting</a></li>
+                <li><a href="###"><i class="fa fa-users"></i>Login Out</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+    
   </body>
 </html>
