--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="//cdn.bootcss.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
     <link href="/css/app.css" rel="stylesheet">
     
-    <script src="//cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
+    <script src="//cdn.bootcss.com/jquery/2.2.4/jquery.min.js"></script>
     <script src="//cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="node_modules/core-js/client/shim.min.js"></script>
     <script src="node_modules/zone.js/dist/zone.js"></script>
@@ -22,14 +22,14 @@
     <my-app>Loading...</my-app>
     <div class="container-fluid">
       <nav class="row" id="nav">
-        <div class="col-xs-12 col-md-5 menu">
+        <div class="col-xs-12 col-md-6 menu">
           <ul>
             <li><a href="###"><img src="img/logo.png" alt="dockyard" /></a></li>
             <li><a href="###">Repositories</a></li>
             <li><a href="###">Organizations</a></li>
           </ul>
         </div>
-        <div class="col-xs-12 col-md-5 col-md-offset-2 user">
+        <div class="col-xs-12 col-md-6 user">
           <ul class="pull-right">
             <li><input type="text" placeholder="search" /></li>
             <li class="relative">
@@ -49,20 +49,107 @@
           </ul>
         </div>
       </nav>
-      <div id="repoList" style="display: none">
+      <div id="repoList">
         <p class="filter-repo">
-          <label class="relative">
+          <span class="relative">
             <input type="text" />
-            <i class="fa fa-search"></i>
-          </label>
-          <span>
-            <i class="fa fa-book"></i>
-            Create repo
+            <i class="fa fa-search search"></i>
+          </span>
+          <span class="col-skyblue">
+            <i class="fa fa-plus"></i>
+            Create Repository
           </span>
         </p>
-        <div>
-          <div></div>
-          <p></p>
+        <div class="content">
+          <div class="row media-repo">
+            <p class="col-xs-4 col-md-2 col-md-offset-1 repo-left text-center">
+              <span>org name</span><br/>
+              <span>this is company</span>
+            </p>
+            <div class="col-xs-12 col-md-7 col-md-offset-2 repo-body">
+              <a href="###">
+                <h3>docker</h3>
+                <h5 class="col-gray">this is docker this is docker this is docker this is docker this is docker this is docker this is docker this is docker this is docker</h5>
+                <p class="star-fork">
+                  <i class="fa fa-star col-orange"></i> 100 
+                  <i class="fa fa-code-fork mar-lt"></i> 100 
+                  <i class="fa fa-info-circle"></i>
+                </p>
+              </a>
+              <a href="###">
+                <h3>docker</h3>
+                <h5 class="col-gray">this is docker this is docker this is docker this is docker this is docker this is docker this is docker this is docker this is docker</h5>
+                <p class="star-fork">
+                  <i class="fa fa-star col-orange"></i> 100 
+                  <i class="fa fa-code-fork mar-lt"></i> 100 
+                  <i class="fa fa-info-circle"></i>
+                </p>
+              </a>
+              <a href="###">
+                <h3>docker</h3>
+                <h5 class="col-gray">this is docker this is docker this is docker this is docker this is docker this is docker this is docker this is docker this is docker</h5>
+                <p class="star-fork">
+                  <i class="fa fa-star col-orange"></i> 100 
+                  <i class="fa fa-code-fork mar-lt"></i> 100 
+                  <i class="fa fa-info-circle"></i>
+                </p>
+              </a>
+              <a href="###">
+                <h3>docker</h3>
+                <h5 class="col-gray">this is docker this is docker this is docker this is docker this is docker this is docker this is docker this is docker this is docker</h5>
+                <p class="star-fork">
+                  <i class="fa fa-star col-orange"></i> 100 
+                  <i class="fa fa-code-fork mar-lt"></i> 100 
+                  <i class="fa fa-info-circle"></i>
+                </p>
+              </a>
+            </div>
+          </div>
+          <div class="row media-repo">
+            <p class="col-xs-4 col-md-2 col-md-offset-1 repo-left text-center">
+              <span>org name</span><br/>
+              <span>this is company</span>
+            </p>
+            <div class="col-xs-12 col-md-7 col-md-offset-2 repo-body">
+              <a href="###">
+                <h3>docker</h3>
+                <h5 class="col-gray">this is docker this is docker this is docker this is docker this is docker this is docker this is docker this is docker this is docker</h5>
+                <p class="star-fork">
+                  <i class="fa fa-star col-orange"></i> 100 
+                  <i class="fa fa-code-fork mar-lt"></i> 100 
+                  <i class="fa fa-info-circle"></i>
+                </p>
+              </a>
+              <a href="###">
+                <h3>docker</h3>
+                <h5 class="col-gray">this is docker this is docker this is docker this is docker this is docker this is docker this is docker this is docker this is docker</h5>
+                <p class="star-fork">
+                  <i class="fa fa-star col-orange"></i> 100 
+                  <i class="fa fa-code-fork mar-lt"></i> 100 
+                  <i class="fa fa-info-circle"></i>
+                </p>
+              </a>
+              <a href="###">
+                <h3>docker</h3>
+                <h5 class="col-gray">this is docker this is docker this is docker this is docker this is docker this is docker this is docker this is docker this is docker</h5>
+                <p class="star-fork">
+                  <i class="fa fa-star col-orange"></i> 100 
+                  <i class="fa fa-code-fork mar-lt"></i> 100 
+                  <i class="fa fa-info-circle"></i>
+                </p>
+              </a>
+              <a href="###">
+                <h3>docker</h3>
+                <h5 class="col-gray">this is docker this is docker this is docker this is docker this is docker this is docker this is docker this is docker this is docker</h5>
+                <p class="star-fork">
+                  <i class="fa fa-star col-orange"></i> 100 
+                  <i class="fa fa-code-fork mar-lt"></i> 100 
+                  <i class="fa fa-info-circle"></i>
+                </p>
+              </a>
+            </div>
+          </div>
+          <p>next</p>
         </div>
       </div>
     </div>
