modify create repo html

--- a/index.html
+++ b/index.html
@@ -49,107 +49,37 @@
           </ul>
         </div>
       </nav>
-      <div id="repoList">
-        <p class="filter-repo">
-          <span class="relative">
-            <input type="text" />
-            <i class="fa fa-search search"></i>
-          </span>
-          <span class="col-skyblue">
-            <i class="fa fa-plus"></i>
-            Create Repository
-          </span>
-        </p>
-        <div class="content">
-          <div class="row media-repo">
-            <p class="col-xs-4 col-md-2 col-md-offset-1 repo-left text-center">
-              <span>org name</span><br/>
-              <span>this is company</span>
-            </p>
-            <div class="col-xs-12 col-md-7 col-md-offset-2 repo-body">
-              <a href="###">
-                <h3>docker</h3>
-                <h5 class="col-gray">this is docker this is docker this is docker this is docker this is docker this is docker this is docker this is docker this is docker</h5>
-                <p class="star-fork">
-                  <i class="fa fa-star col-orange"></i> 100 
-                  <i class="fa fa-code-fork mar-lt"></i> 100 
-                  <i class="fa fa-info-circle"></i>
-                </p>
-              </a>
-              <a href="###">
-                <h3>docker</h3>
-                <h5 class="col-gray">this is docker this is docker this is docker this is docker this is docker this is docker this is docker this is docker this is docker</h5>
-                <p class="star-fork">
-                  <i class="fa fa-star col-orange"></i> 100 
-                  <i class="fa fa-code-fork mar-lt"></i> 100 
-                  <i class="fa fa-info-circle"></i>
-                </p>
-              </a>
-              <a href="###">
-                <h3>docker</h3>
-                <h5 class="col-gray">this is docker this is docker this is docker this is docker this is docker this is docker this is docker this is docker this is docker</h5>
-                <p class="star-fork">
-                  <i class="fa fa-star col-orange"></i> 100 
-                  <i class="fa fa-code-fork mar-lt"></i> 100 
-                  <i class="fa fa-info-circle"></i>
-                </p>
-              </a>
-              <a href="###">
-                <h3>docker</h3>
-                <h5 class="col-gray">this is docker this is docker this is docker this is docker this is docker this is docker this is docker this is docker this is docker</h5>
-                <p class="star-fork">
-                  <i class="fa fa-star col-orange"></i> 100 
-                  <i class="fa fa-code-fork mar-lt"></i> 100 
-                  <i class="fa fa-info-circle"></i>
-                </p>
-              </a>
-            </div>
+      <div class="row" id="newRepo">
+        <ul class="col-xs-12 col-md-3 col-md-offset-1">
+          <li>
+            <span>1</span>
+            <b>this is guide of create repo </b>
+          </li>
+          <li>
+            <span>2</span>
+            <b>this is guide of create repo </b>
+          </li>
+          <li>
+            <span>3</span>
+            <b>this is guide of create repo </b>
+          </li>
+          <li>
+            <span>4</span>
+            <b>this is guide of create repo </b>
+          </li>
+        </ul>
+        <div class="col-xs-12 col-md-5 col-md-offset-2 base-info">
+          <p><input type="text" placeholder="name" /></p>
+          <p><input type="text" placeholder="short descript" /></p>
+          <textarea placeholder="full descript"></textarea>
+          <div class="visible-type">
+            <span>visibility</span>
+            <select>
+              <option value="0">public</option>
+              <option value="1">private</option>
+            </select>
           </div>
-          <div class="row media-repo">
-            <p class="col-xs-4 col-md-2 col-md-offset-1 repo-left text-center">
-              <span>org name</span><br/>
-              <span>this is company</span>
-            </p>
-            <div class="col-xs-12 col-md-7 col-md-offset-2 repo-body">
-              <a href="###">
-                <h3>docker</h3>
-                <h5 class="col-gray">this is docker this is docker this is docker this is docker this is docker this is docker this is docker this is docker this is docker</h5>
-                <p class="star-fork">
-                  <i class="fa fa-star col-orange"></i> 100 
-                  <i class="fa fa-code-fork mar-lt"></i> 100 
-                  <i class="fa fa-info-circle"></i>
-                </p>
-              </a>
-              <a href="###">
-                <h3>docker</h3>
-                <h5 class="col-gray">this is docker this is docker this is docker this is docker this is docker this is docker this is docker this is docker this is docker</h5>
-                <p class="star-fork">
-                  <i class="fa fa-star col-orange"></i> 100 
-                  <i class="fa fa-code-fork mar-lt"></i> 100 
-                  <i class="fa fa-info-circle"></i>
-                </p>
-              </a>
-              <a href="###">
-                <h3>docker</h3>
-                <h5 class="col-gray">this is docker this is docker this is docker this is docker this is docker this is docker this is docker this is docker this is docker</h5>
-                <p class="star-fork">
-                  <i class="fa fa-star col-orange"></i> 100 
-                  <i class="fa fa-code-fork mar-lt"></i> 100 
-                  <i class="fa fa-info-circle"></i>
-                </p>
-              </a>
-              <a href="###">
-                <h3>docker</h3>
-                <h5 class="col-gray">this is docker this is docker this is docker this is docker this is docker this is docker this is docker this is docker this is docker</h5>
-                <p class="star-fork">
-                  <i class="fa fa-star col-orange"></i> 100 
-                  <i class="fa fa-code-fork mar-lt"></i> 100 
-                  <i class="fa fa-info-circle"></i>
-                </p>
-              </a>
-            </div>
-          </div>
-          <p>next</p>
+          <button>create</button>
         </div>
       </div>
     </div>
