add org create file & modify createRepo.html

--- a/index.html
+++ b/index.html
@@ -49,93 +49,28 @@
           </ul>
         </div>
       </nav>
-      <div id="repoDetail">
-        <p class="praise">
-          org/repo name
-          <i class="fa fa-star"></i>
-        </p>
-        <div class="row">
-          <div class="col-xs-12 col-md-6">
-            <div class="space info"> 
-              <a href="#info" data-toggle="collapse">
-                Base Info
-                <i class="fa fa-sort-desc expend"></i>
-              </a>
-              <div class="panel-collapse collapse in" id="info">
-                <div class="command">
-                  <h4>
-                    Docker Pull Command
-                    <i class="fa fa-files-o copy"></i>
-                  </h4>
-                  <span>docker pull command</span>
-                </div>
-                <ul class="desc">
-                  <li>
-                    Short Description<br/>
-                    <span>this is short desc</span>
-                  </li>
-                  <li>
-                    Full Description<br/>
-                    <span>this is full desc</span>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-12 col-md-6">
-            <div class="space setting"> 
-              <a href="#setting" data-toggle="collapse">
-                Setting
-                <i class="fa fa-sort-desc expend"></i>
-              </a>
-              <div class="panel-collapse collapse" id="setting">
-                65567676
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-12 col-md-6">
-            <div class="space collaborators"> 
-              <a href="#collaborators" data-toggle="collapse">
-                Collaborators
-                <i class="fa fa-sort-desc expend"></i>
-              </a>
-              <div class="panel-collapse collapse" id="collaborators">
-                65567676
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-12 col-md-6">
-            <div class="space tags"> 
-              <a href="#tags" data-toggle="collapse">
-                Tags
-                <i class="fa fa-sort-desc expend"></i>
-              </a>
-              <div class="panel-collapse collapse" id="tags">
-                65567676
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-12 col-md-6">
-            <div class="space history"> 
-              <a href="#history" data-toggle="collapse">
-                Build History
-                <i class="fa fa-sort-desc expend"></i>
-              </a>
-              <div class="panel-collapse collapse" id="history">
-                65567676
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-12 col-md-6">
-            <div class="space triggers"> 
-              <a href="#triggers" data-toggle="collapse">
-                Build Triggers
-                <i class="fa fa-sort-desc expend"></i>
-              </a>
-              <div class="panel-collapse collapse" id="triggers">
-                65567676
-              </div>
-            </div>
+      <div id="createOrg">
+        <div class="steps">
+          <p class="guide">
+            Organizations can have multiple Teams. Teams can have differing permissions. Namespace is unique and this is where repositories for this organization will be created. 
+          </p>
+          <ul class="step-nav">
+            <li><span>1</span></li>
+            <li><span>2</span></li>
+            <li><span>3</span></li>
+            <li><span>4</span></li>
+          </ul>
+        </div>
+        <div class="create">
+          <div class="first-step">
+            <input type="text" placeholder="Namespace" />
+            <input type="text" placeholder="Organization Name" />
+            <input type="text" placeholder="Company" />
+            <input type="text" placeholder="Location" />
+            <input type="text" placeholder="Gravatar Email" />
+            <input type="text" placeholder="Website URL" />
+            <input type="text" placeholder="Location" />
+            <button class="save">Create</button>
           </div>
         </div>
       </div>
