--- a/index.html
+++ b/index.html
@@ -19,75 +19,120 @@
     </script>
   </head>
   <body>
-    <my-app>Loading...</my-app>
+    <my-app>loading...</my-app>
     <div class="container-fluid">
-      <header id="header">
-        <div class="over-hidden">
-          <p class="pull-left"><img src="img/logo.png"/></p>
-          <p class="pull-right nav-rt">
-            <a href="javascript:void(0)" class="space">Brower</a >
-            <a href="javascript:void(0)" class="space">Tutorial</a >
-            <a href="javascript:void(0)" class="space">Docs</a >
-            <a href="javascript:void(0)" class="space">Login</a >
-            <a href="javascript:void(0)" class="space">Sign up</a >
-          </p>
+      <nav class="row" id="nav">
+        <div class="col-xs-12 col-md-6 menu">
+          <ul>
+            <li><a href="###"><img src="img/logo.png" alt="dockyard" /></a></li>
+            <li><a href="###">Repositories</a></li>
+            <li><a href="###">Organizations</a></li>
+          </ul>
         </div>
-        <ul class="text-center search">
-          <li><h3>Search The Container Repository</h3></li>
-          <li><h4 class="mar-tb-twenty">Find Trusted Containers And DevOps Component</h4></li>
-          <li><input type="text"/></li>
-        </ul>
-      </header>
-      <div class="content-one">
-        <p class="pull-left features">
-          <span class="space character">Spotlight</span>
-          <span class="space title">Feature Component</span>
-          <span class="space detail">Working out of box, integration in the ContainerOps</span>
-        </p>
-        <div class="pull-left surface-carousel">轮播图</div>
+        <div class="col-xs-12 col-md-6 user">
+          <ul class="pull-right">
+            <li><input type="text" placeholder="search" /></li>
+            <li class="relative">
+              <a id="#createRepo" data-toggle="dropdown"><i class="fa fa-plus"></i>Create</a>
+              <ul class="dropdown-menu" id="createRepo">
+                <li><a href="###"><i class="fa fa-book"></i>Create Repository</a></li>
+                <li><a href="###"><i class="fa fa-users"></i>Create Organization</a></li>
+              </ul>
+            </li>
+            <li class="relative">
+              <a id="#userSetting" data-toggle="dropdown"><i class="fa fa-user"></i>User</a>
+              <ul class="dropdown-menu" id="userSetting">
+                <li><a href="###"><i class="fa fa-book"></i>Setting</a></li>
+                <li><a href="###"><i class="fa fa-users"></i>Login Out</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </nav>
+      <div id="userSet">
+        <p class="title">User Setting</p>
+        <div class="content">
+          <ul class="nav nav-tabs user-nav">
+            <li class="active">
+              <a href="#userInfo" data-toggle="tab">Base Info</a>
+            </li>             
+            <li>
+              <a href="#notify" data-toggle="tab">Notifications</a>
+            </li>
+            <li>
+              <a href="#linkAccount" data-toggle="tab">Linked Accounts</a>
+            </li>
+          </ul>
+          <div class="tab-content user-content">
+            <div id="userInfo" class="tab-pane active">
+              <p class="tips">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe a rerum eligendi, iste deserunt fugit id dicta modi nam quidem sed velit soluta earum natus, vel eveniet quo suscipit animi.
+              </p>
+              <div class="edit-info">
+                <div class="over-hidden">
+                  <p class="pull-left visib">
+                    <input type="radio" name="visib" value="0"/>public
+                    <input type="radio" name="visib" value="1"/>private
+                  </p>
+                  <div class="pull-left email">
+                    <input type="email"/> 
+                    <button class="add-email">add email</button>
+                    <ul class="emails">
+                      <li>
+                        <span class="addr">dockyard@163.com</span>
+                        <span class="verified">verified</span>
+                        <span class="relation">primary</span>
+                      </li>
+                      <li>
+                        <span class="addr">dockyard@163.com</span>
+                        <span class="verified">Send Email</span>
+                        <span class="relation">Sub</span>
+                        <span class="delet"><i class="fa fa-trash-o"></i></span>
+                      </li>
+                      <li>
+                        <span class="addr">dockyard@163.com</span>
+                        <span class="verified">Send Email</span>
+                        <span class="relation">Sub</span>
+                        <span class="delet"><i class="fa fa-trash-o"></i></span>
+                      </li>
+                      <li>
+                        <span class="addr">dockyard@163.com</span>
+                        <span class="verified">Send Email</span>
+                        <span class="relation">Sub</span>
+                        <span class="delet"><i class="fa fa-trash-o"></i></span>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+                <ul class="password">
+                  <li>
+                    <span class="space-text">Old Password</span>
+                    <input type="password"/>
+                  </li>
+                  <li>
+                    <span class="space-text">New Password</span>
+                    <input type="password"/>
+                  </li>
+                  <li>
+                    <span class="space-text">Confirm Password</span>
+                    <input type="password"/>
+                  </li>
+                  <li>
+                    <button>Save</button>
+                  </li>
+                </ul>
+                <form class="infor"></form>
+              </div>
+            </div>
+            <div id="notify" class="tab-pane">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam vitae architecto ratione molestiae. Qui nemo delectus voluptate velit asperiores, quia quam esse, consectetur. Voluptatum est quae, vero ipsa nulla incidunt.
+            </div>
+            <div id="linkAccount" class="tab-pane">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta laborum recusandae, fugiat reprehenderit, laboriosam ipsam autem ea quo, repudiandae odio at. Ut maiores reprehenderit architecto. Dolor dignissimos placeat perspiciatis recusandae.
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="row content-two">
-        <div class="col-xs-6 col-md-3">
-          <p class="space font-big">
-            On-premises Containers as a Service with Docker Datacenter On-premises Containers as a Service with Docker Datacenter 
-          </p>
-        </div>
-        <div class="col-xs-6 col-md-3">
-          <p class="space">
-            On-premises Containers as a Service with Docker Datacenter On-premises Containers as a Service with Docker Datacenter On-premises Containers as a Service with Docker Datacenter On-premises Containers as a Service with Docker Datacenter
-          </p>
-        </div>
-        <div class="col-xs-6 col-md-3">
-          <p class="space">
-            On-premises Containers as a Service with Docker Datacenter On-premises Containers as a Service with Docker Datacenter On-premises Containers as a Service with Docker Datacenter On-premises Containers as a Service with Docker Datacenter
-          </p>
-        </div>
-        <div class="col-xs-6 col-md-3">
-          <p class="space">
-            On-premises Containers as a Service with Docker Datacenter On-premises Containers as a Service with Docker Datacenter On-premises Containers as a Service with Docker Datacenter On-premises Containers as a Service with Docker Datacenter
-          </p>
-        </div>
-      </div>
-      <div class="content-three">
-        <p class="space">
-          <img src="###"/>
-          <img src="###"/>
-          <img src="###"/>
-          <img src="###"/>
-        </p>
-      </div>
-      <footer id="footer">
-        <p class="pull-left">
-          Build,Ship,Run,An open plattorm tor distributed applications for developers and sysadmins <br/>
-          Copyright@2016 Docker Inc.All rights reserved
-        </p>
-        <p class="pull-right">
-          <span class="space">Privacy</span>
-          <span class="space">Terms</span>
-          <span class="space">About</span>
-          <span class="space">Contact</span>
-        </p>
-      </footer>
     </div>
   </body>
 </html>
