--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script src="dist/lib/zone.js/dist/zone.js"></script>
     <script src="dist/lib/reflect-metadata/Reflect.js"></script>
     <script src="dist/lib/systemjs/dist/system.src.js"></script>
-    <script src="dist/systemjs.config.js"></script>
+    <script src="systemjs.config.js"></script>
     <script src="dist/js/app.min.js"></script>
 
     <script>
