--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script src="dist/lib/reflect-metadata/Reflect.js"></script>
     <script src="dist/lib/systemjs/dist/system.src.js"></script>
     <script src="systemjs.config.js"></script>
-    <script src="dist/js/app.min.js"></script>
+    <!-- <script src="dist/js/app.min.js"></script> -->
 
     <script>
       System.import('app').catch(function(err){ console.error(err); });
