--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/lib.min.css" rel="stylesheet" />
-    <link href="css/app.min.css" rel="stylesheet" />
+    <link href="css/app.css" rel="stylesheet" />
 
     <script src="lib/jquery/dist/jquery.min.js"></script>
     <script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
