--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <base href="/" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <link href="dist/css/lib.min.css" rel="stylesheet" />
+    <link rel='stylesheet' type='text/css'
+href='http://fonts.googleapis.com/css?family=ubuntu-mono'>
+   <!--  <link href="dist/css/lib.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <script src="dist/lib/jquery/dist/jquery.min.js"></script>
     <script src="dist/lib/bootstrap/dist/js/bootstrap.min.js"></script>
@@ -12,6 +14,7 @@
     <script src="dist/lib/zone.js/dist/zone.js"></script>
     <script src="dist/lib/reflect-metadata/Reflect.js"></script>
     <script src="dist/lib/systemjs/dist/system.src.js"></script> -->
+
     <link href="css/lib.min.css" rel="stylesheet" />
     <link href="css/app.min.css" rel="stylesheet" />
     <script src="lib/jquery/dist/jquery.min.js"></script>
@@ -20,8 +23,8 @@
     <script src="lib/zone.js/dist/zone.js"></script>
     <script src="lib/reflect-metadata/Reflect.js"></script>
     <script src="lib/systemjs/dist/system.src.js"></script>
-    <script src="systemjs.config.js"></script>
 
+    <script src="systemjs.config.js"></script>
     <script>
       System.import('app').catch(function(err){ console.error(err); });
     </script>
