--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono" rel="stylesheet">
-   <!--  <link href="dist/css/lib.min.css" rel="stylesheet" />
+    <link href="dist/css/lib.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <script src="dist/lib/jquery/dist/jquery.min.js"></script>
     <script src="dist/lib/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="dist/lib/core-js/client/shim.min.js"></script>
     <script src="dist/lib/zone.js/dist/zone.js"></script>
     <script src="dist/lib/reflect-metadata/Reflect.js"></script>
-    <script src="dist/lib/systemjs/dist/system.src.js"></script> -->
+    <script src="dist/lib/systemjs/dist/system.src.js"></script>
 
-    <link href="css/lib.min.css" rel="stylesheet" />
+    <!-- <link href="css/lib.min.css" rel="stylesheet" />
     <link href="css/app.min.css" rel="stylesheet" />
     <script src="lib/jquery/dist/jquery.min.js"></script>
     <script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="lib/core-js/client/shim.min.js"></script>
     <script src="lib/zone.js/dist/zone.js"></script>
     <script src="lib/reflect-metadata/Reflect.js"></script>
-    <script src="lib/systemjs/dist/system.src.js"></script>
+    <script src="lib/systemjs/dist/system.src.js"></script> -->
 
     <script src="systemjs.config.js"></script>
     <script>
