--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="salt" content="{{.Salt}}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="favicon.ico type="image/x-icon" rel="icon">
+    <link href="favicon.ico" type="image/x-icon" rel="icon">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono" rel="stylesheet">
     
     <!-- <link href="dist/css/lib.min.css" rel="stylesheet" />
