--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="favicon.ico" type="image/x-icon" rel="icon">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono" rel="stylesheet">
-    <!-- 
-    <link href="dist/css/lib.min.css" rel="stylesheet" />
+    
+    <!-- <link href="dist/css/lib.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <script src="dist/lib/jquery/dist/jquery.min.js"></script>
     <script src="dist/lib/bootstrap/dist/js/bootstrap.min.js"></script>
