modify repo detail css & add detail api

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <base href="/" />
     <meta charset="UTF-8">
     <meta name="salt" content="{{.Salt}}">
+    <meta name="runmode" content="{{.RunMode}}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="favicon.ico" type="image/x-icon" rel="icon">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono" rel="stylesheet">
