modify coming file css

--- a/coming.html
+++ b/coming.html
@@ -11,6 +11,11 @@
     <link href="css/lib.min.css" rel="stylesheet" />
     <link href="css/app.min.css" rel="stylesheet" />
     <style>
+      body {
+        overflow: hidden;
+        padding: 0;
+        margin: 0;
+      }
       body, .coming, .coming img {
         width: 100%;
         height: 100%;
