--- a/coming.html
+++ b/coming.html
@@ -51,8 +51,18 @@
       <div class="text">
         <h4 class="title">We are coming soon...</h4>
         Any question please contact via 
-        <a href="javascript:void(0)">administrator@opshub.com</a>
+        <a href="mailto:administrator@opshub.sh">administrator@opshub.sh</a>
       </div>
     </div>
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-86107686-2', 'auto');
+    ga('send', 'pageview');
+
+    </script>
   </body>
 </html>
